CPO-44 - List ids/case_ids not found when returning 404 Not Found